--- a/Admin/pages/totalStud.css
+++ b/Admin/pages/totalStud.css
@@ -229,14 +229,14 @@ h3{
     align-items: center;
     justify-content: center;
 }
-
+/*
 input[type="text"], select {
     width: 44%;
     padding: 10px;
     margin-bottom: 20px;
     border: none;
     border-bottom: 1px solid purple;
-    /* border: 1px solid #ccc; */
+     border: 1px solid #ccc; 
     border-radius: 4px;
     margin-left: 2%;
 }
